// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPreview Renders horizontal VideoPreview 1`] = `
<div
  className="videoPreview horizontal"
>
  <Link
    to="/watch?v=0"
  >
    <div
      className="thumbnail"
    >
      <Image
        as="img"
        src="http://via.placeholder.com/210x118"
        ui={true}
      />
      <div
        className="timeLabel"
      >
        <span>
          3:52
        </span>
      </div>
    </div>
  </Link>
  <div
    className="videoInfo"
  >
    <Link
      to="/watch?v=0"
    >
      <div
        className="videoTitle"
      >
        Video Title
      </div>
    </Link>
    <div
      className="channelTitle"
    >
      Channel Name
    </div>
    <Link
      to="/watch?v=0"
    >
      <div>
        56
         views • 
        <TimeAgo
          date={1970-01-01T00:00:00.000Z}
          live={false}
          title=""
        />
      </div>
    </Link>
  </div>
</div>
`;

exports[`VideoPreview Renders vertical VideoPreview 1`] = `
<div
  className="videoPreview vertical"
>
  <Link
    to="/watch?v=0"
  >
    <div
      className="thumbnail"
    >
      <Image
        as="img"
        src="http://via.placeholder.com/210x118"
        ui={true}
      />
      <div
        className="timeLabel"
      >
        <span>
          3:52
        </span>
      </div>
    </div>
  </Link>
  <div
    className="videoInfo"
  >
    <Link
      to="/watch?v=0"
    >
      <div
        className="videoTitle"
      >
        Video Title
      </div>
    </Link>
    <div
      className="channelTitle"
    >
      Channel Name
    </div>
    <Link
      to="/watch?v=0"
    >
      <div>
        56
         views • 
        <TimeAgo
          date={1970-01-01T00:00:00.000Z}
          live={false}
          title=""
        />
      </div>
    </Link>
  </div>
</div>
`;
